overflow fix again

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -3,6 +3,11 @@
     width: 100%;
     justify-content: center;
 
+    .main-box,
+    .box {
+        overflow-y: scroll;
+    }
+
     .main-box {
         position: relative;
         background: #f4f4f428;
@@ -68,7 +73,7 @@
                 flex-direction: column;
                 justify-content: space-evenly;
                 align-items: center;
-                overflow-y: scroll;
+
 
                 h2 {
                     color: #5A537B;
